<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_application">PocketBudget</string>
    <string name="income_button_menu">Entrée d\'argent</string>
    <string name="expenditure_button_menu">Sortie d\'argent</string>
    <string name="app_name">PocketBudget</string>
    <string name="title_expenditure">Nouvelle dépense</string>
    <string name="title_display_expenditure">Modif. dépense</string>
    <string name="title_display_income">Modif. revenu</string>
    <string name="date_expenditure">Date :</string>
    <string name="category_expenditure">Catégorie :</string>
    <string name="name_expenditure">Nom :</string>
    <string name="sum_expenditure">Montant :</string>
    <string name="title_income">Nouveau revenu</string>
    <string name="date_income">Date :</string>
    <string name="category_income">Catégorie :</string>
    <string name="name_income">Nom :</string>
    <string name="sum_income">Montant :</string>
    <string name="validate_button">Valider</string>
    <string name="title_activity_new_income">Nouveau Revenu</string>
    <string name="title_activity_new_expenditure">Nouvelle dépense</string>
    <string name="title_activity_list_revenus">Liste des revenus</string>
    <string name="action_settings">Options</string>
    <string name="difference_textView">Diff. :</string>
    <string name="add_income_butn">Ajouter nouveau revenu</string>
    <string name="add_expenditure_butn">Ajouter nouvelle dépense</string>
    <string name="statistics_butn">Voir statistiques</string>
    <string name="dialog_delete_title">Supprimer l\'élément</string>
    <string name="dialog_delete_message">L\'action de suppression est irréversible</string>
    <string name="dialog_delete_yes">Supprimer</string>
    <string name="dialog_delete_no">Annuler</string>
    <string name="error_insert">Un des champs n\'est pas complété</string>

    <string-array name="categories_list_income">
        <item>SALAIRE</item>
        <item>REVENUS COMPLEMENTAIRES</item>
        <item>CADEAUX</item>
    </string-array>
    <string-array name="categories_list_expenditure">
        <item>LOGEMENT</item>
        <item>TRANSPORT</item>
        <item>ENERGIE</item>
        <item>TELEPHONE</item>
        <item>SANTE</item>
        <item>ALIMENTATION</item>
        <item>SPORT</item>
        <item>CADEAUX</item>
        <item>EXTRAS</item>
    </string-array>

    <string name="title_activity_list_expenditure">ListExpenditureActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_expenditure">ExpenditureActivity</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>

</resources>
