<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:background="#ff61c3ff"
        android:baselineAligned="false"
        android:id="@+id/layout_principale_depense">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_expenditure"
            android:id="@+id/titre_nouvelle_depense"
            android:textSize="40dp"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textColor="#ffff1529" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/date_layout"
            android:weightSum="1"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date_expenditure"
                android:ems="10"
                android:id="@+id/date_depense_textView"
                android:textSize="30sp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/displayDate"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="47dp"
                android:layout_height="45dp"
                android:src="@drawable/calendar"
                android:id="@+id/pickDate"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/categorie_layout"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/category_expenditure"
                android:id="@+id/categorie_textView"
                android:textSize="30dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/categories_depense_spinner"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/nom_layout"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name_expenditure"
                android:id="@+id/nom_textView"
                android:textSize="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/nom_depense_editText"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/montant_depense_layout"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sum_expenditure"
                android:id="@+id/montant_depense_textView"
                android:textSize="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/montant_depense_editText"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate_button"
            android:textSize="25dp"
            android:id="@+id/valider_button"
            android:layout_gravity="center_horizontal"
            android:onClick="addNewExpenditure"
            />


    </LinearLayout>
</LinearLayout>