<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff61c3ff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_application"
            android:id="@+id/title_application"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="40dp"
            android:layout_marginBottom="50dp"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:visibility="visible" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/income_button_menu"
            android:id="@+id/income_button_main"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:text="@string/expenditure_button_menu"
            android:id="@+id/expenditure_button_main"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="162dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/difference"
                android:weightSum="1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:id="@+id/difference" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
